<resources>
    <string name="app_name">SpinCycle</string>
    <string name="address">Address</string>
    <string name="recommendations">Recommendations</string>
    <string name="laundry_name">Laundry Name</string>
    <string name="laundry_service">Laundry Service</string>
    <string name="title">Spin Cycle</string>
    <string name="description">One stop destination for all laundry work such as washing, ironing, and dry cleaning</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="fullname">Full Name</string>
    <string name="email">E-mail</string>
    <string name="email_field">Email</string>
    <string name="password">Password</string>
    <string name="or_login">Have an account?</string>
    <string name="desc">We are available in every location</string>
    <string name="example">Kotagede, Yogyakarta, Special Region Yogyakarta</string>
    <string name="current_location">Use Current Location</string>
    <string name="add_address">Add Address +</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="descWash">Wash clean, smell good, but not ironed</string>
    <string name="descIron">Wash clean, smell good, and ironed</string>
    <string name="descDry">Suits, Dresses, and kind of clean!</string>
    <string name="descCarpet">So that you can relax comfortably on the floor</string>
    <string name="descBed">Sleep so comfortably, itch and odor free</string>
    <string name="descShoes">Let\'s make it even cooler and… clean</string>
    <string name="just_wash">Just Wash</string>
    <string name="iron_wash">Iron Wash</string>
    <string name="dry_cleaning">Dry Cleaning</string>
    <string name="carpet">Carpet</string>
    <string name="bed">Bed</string>
    <string name="shoes_bag"><![CDATA[Shoes & Bag]]></string>
    <string name="laundry_address">Laundry Address</string>
    <string name="operational_hours">Operational Hours</string>
    <string name="link_laundry">www.xxxxx.com</string>
    <string name="contact">Contact</string>
    <string name="direction">Direction</string>
    <string name="our_services">Our Services</string>
    <string name="search">Search</string>
    <string name="near">Near</string>
    <string name="desc_near">There is a laundromat near you</string>
    <string name="express">Express</string>
    <string name="desc_express">There is an express laundromat near you</string>
    <string name="delivery">Delivery</string>
    <string name="desc_delivery">There is a delivery laundromat near you</string>
    <string name="self_service">Self Service</string>
    <string name="desc_self_serivce">There is a self servicelaundromat near you</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="done">Done</string>
    <string name="add">New</string>
    <string name="language">Language</string>
    <string name="accessibility">Accessibility</string>
    <string name="help_desc">Hello, how can we help you?</string>
    <string name="need_help">Need some help?</string>
    <string name="send">Send</string>
    <string name="search_laundry">Search Laundry</string>
    <string name="logout">Logout</string>
</resources>
