<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".detail.DetailLaundryActivity"
    tools:ignore="ScrollViewCount">

    <ImageView
        android:id="@+id/imgLaundry"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="-25dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:src="@tools:sample/backgrounds/scenic" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDetail"
        android:layout_width="380dp"
        android:layout_height="220dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="25dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailLaundry"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameLaundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laundry_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/locLaundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="50dp"
                android:drawablePadding="5dp"
                android:text="@string/laundry_address"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:drawableLeftCompat="@drawable/location" />

            <TextView
                android:id="@+id/opLaundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginStart="50dp"
                android:drawablePadding="5dp"
                android:text="@string/operational_hours"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableLeftCompat="@drawable/alarm" />

            <TextView
                android:id="@+id/linkLaundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginStart="50dp"
                android:drawablePadding="5dp"
                android:text="@string/link_laundry"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/new_blue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:drawableLeftCompat="@drawable/link" />

            <Button
                android:id="@+id/btnContact"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="25dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/telephone"
                android:backgroundTint="#EFF1FB"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnDirection"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="25dp"
                android:text="@string/direction"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/navigation"
                android:backgroundTint="#EFF1FB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RtlHardcoded" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ourServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="390dp"
        android:text="@string/our_services"
        android:textSize="25sp"
        android:textColor="@color/white" />

    <GridView
        android:id="@+id/gvService"
        android:layout_width="match_parent"
        android:layout_height="680dp"
        android:layout_marginTop="420dp"
        tools:listitem="@layout/item_grid_service"
        tools:ignore="MissingConstraints" />

    <include layout="@layout/button_app_bar"
        android:id="@+id/button_app_bar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"/>

</FrameLayout>