<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".account.HelpActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/searchBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/searchBar"
            tools:ignore="ContentDescription,MissingConstraints">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_back_blue" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="65dp"
            android:layout_marginTop="-28dp"
            android:text="@string/help"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/descHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_desc"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHelp"
        android:layout_width="325dp"
        android:layout_height="355dp"
        android:layout_marginTop="20dp"
        android:background="#818283"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descHelp">

        <EditText
            android:id="@+id/editDecsHelp"
            android:layout_width="300dp"
            android:layout_height="365dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/need_help"
            android:textColor="@color/grey"
            android:gravity="top"
            android:inputType="textMultiLine"
            tools:ignore="Autofill,LabelFor" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/new_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHelp"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>